[metadata]
name = rossa
version = 0.1
description = Catalog of infrastructure-agnostic workflows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rossaai/workflows
author = ROSSA AI
author_email = contact@rossa.ai
license = Apache-2.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.8
install_requires =
    modal==0.62.180
    pydantic==1.10
    fastapi
    requests 
    opencv-python-headless
    Pillow
    numpy

[options.entry_points]
console_scripts =
    rossa = rossa.__main__:main